    int32_t (*call_spvm_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id);
  * Change the definitions of the following native API
    [Before]
    void (*call_init_blocks)(SPVM_ENV* env);
    
    [After]
    void (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
  * Native API new_env don't call call_init_blocks.
  * The following depracated methods are removed.
    Fn->copy_array_byte is removed. Use Array->copy_byte instead
    Fn->copy_array_double is removed. Use Array->copy_double instead
    Fn->copy_array_float is removed. Use Array->copy_float instead
    Fn->copy_array_int is removed. Use Array->copy_int instead
    Fn->copy_array_long is removed. Use Array->copy_long instead
    Fn->copy_array_object is removed. Use Array->copy_object instead
    Fn->copy_array_range_byte is removed. Use Array->copy_range_byte instead
    Fn->copy_array_range_double is removed. Use Array->copy_range_double instead
    Fn->copy_array_range_float is removed. Use Array->copy_range_float instead
    Fn->copy_array_range_int is removed. Use Array->copy_range_int instead
    Fn->copy_array_range_long is removed. Use Array->copy_range_long instead
    Fn->copy_array_range_object is removed. Use Array->copy_range_object instead
    Fn->copy_array_range_short is removed. Use Array->copy_range_short instead
    Fn->copy_array_range_string is removed. Use Array->copy_range_string instead
    Fn->copy_array_string is removed. Use Array->copy_tring instead
    Fn->dump_array_byte is removed. Use Array->dump_byte instead
    Fn->dump_array_double is removed. Use Array->dump_double instead
    Fn->dump_array_float is removed. Use Array->dump_float instead
    Fn->dump_array_int is removed. Use Array->dump_int instead
    Fn->dump_array_long is removed. Use Array->dump_long instead
    Fn->dump_array_object is removed. Use Array->dump_object instead
    Fn->dump_array_short is removed. Use Array->dump_short instead