@@ -4620,21 +4620,22 @@ DESTROY(...)
   SV* sv_env = sv_env_ptr ? *sv_env_ptr : &PL_sv_undef;
   if (SvOK(sv_env)) {
     SPVM_ENV* env = INT2PTR(SPVM_ENV*, SvIV(SvRV(sv_env)));
-    
-    // Free stack
-    SV** sv_stack_ptr = hv_fetch(hv_self, "stack", strlen("stack"), 0);
-    SV* sv_stack = sv_stack_ptr ? *sv_stack_ptr : &PL_sv_undef;
-    void* stack = NULL;
-    if (SvOK(sv_stack)) {
-      stack = INT2PTR(void*, SvIV(SvRV(sv_stack)));
-      env->free_stack(env, stack);
-    }
-    
-    // Cleanup global variables
+
     if (env->runtime) {
+      // Free stack
+      SV** sv_stack_ptr = hv_fetch(hv_self, "stack", strlen("stack"), 0);
+      SV* sv_stack = sv_stack_ptr ? *sv_stack_ptr : &PL_sv_undef;
+      void* stack = NULL;
+      if (SvOK(sv_stack)) {
+        stack = INT2PTR(void*, SvIV(SvRV(sv_stack)));
+      }
+        
       // Cleanup global varialbes
       env->cleanup_global_vars(env);
       
+      // Free stack
+      env->free_stack(env, stack);
+
       // Free runtime
       env->api->runtime->free_runtime(env->runtime);
       env->runtime = NULL;
