@@ -59,6 +59,8 @@ int32_t main(int32_t argc, const char *argv[]) {
 
   // Leave scope
   env->leave_scope(env, scope_id);
+
+  env->cleanup_global_vars(env);
   
   env->free_stack(env, stack);
   
